# TrueConf

test/: CMakeLists.txt  Readme.txt
test/include/: trueconf.h
test/src/: main.cpp  trueconf.cpp
